Twitter cards enabled

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -24,6 +24,9 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    {% block twitter_card %}
+    {% endblock %}
 </head>
 <body>
 <div class="content-wrapper">
