Added Meta descriptions

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -24,6 +24,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="{% block meta_description %}Basket of YEGs is an Edmonton-based Podcast hosted by Troy Pavlek and focusing on municipal politics and other stories around Edmonton{% endblock %}">
 
     {% block twitter_card %}
     {% endblock %}
