--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
     <title>{{ site.title }}</title>
     <link rel="stylesheet" type="text/css" href="/css/all.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
@@ -51,6 +51,11 @@
             </a>
         {% endif %}
     </div>
+
+    <div>
+        <a href="http://eepurl.com/bWfb65" class="button xlarge"><i class="fa fa-envelope"></i> Subscribe to Email List</a>
+    </div>
+
 
     <section class="podcast-episodes">
         <div class="podcast-description">
