Added stitcher link

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -50,6 +50,12 @@
                 <i class="fa fa-facebook-official fa-lg"></i>
             </a>
         {% endif %}
+
+        {% if site.stitcher_url %}
+        <a class="subscribe-link" href="{{ site.stitcher_url }}">
+            <i class="fa fa-headphones fa-lg"></i>
+        </a>
+        {% endif %}
     </div>
 
     <div>
